Fix The gauge text looks off-center when its 3 digits. #2

--- a/firecares/firestation/static/firestation/theme/assets/less/firecares.less
+++ b/firecares/firestation/static/firestation/theme/assets/less/firecares.less
@@ -232,13 +232,11 @@ z-index:100;
 }
 
 .dial-inset {
-position:absolute;
+position:relative;
 top:20px;
-left:20px;
 display:block;
 border-radius:50%;
 bottom:20px;
-right:20px;
 z-index:3;
 }
 
